Bug 70853 - RTF Heading numbering not appearing.
Summary: RTF Heading numbering not appearing.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-25 01:21 UTC by Alistair Leslie-Hughes
Modified: 2014-04-28 12:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (37.69 KB, application/rtf)
2013-10-25 01:21 UTC, Alistair Leslie-Hughes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alistair Leslie-Hughes 2013-10-25 01:21:24 UTC
Created attachment 88095 [details]
Sample Document

There is numbering applied to style heading 3.

Open the Document
The line

Class1

should be 

1.1.1 Class1
Comment 1 Alistair Leslie-Hughes 2013-10-25 01:21:58 UTC
Could be related to issue
https://bugs.freedesktop.org/show_bug.cgi?id=69813
Comment 2 Cor Nouws 2013-10-25 08:13:19 UTC
Hi Alistair,

thanks for writing the issue.

When I open Tools > Outline numbering and set the correct numbering for Heading 1, 2, and 3, all is fine.

When I open Tools > Outline numbering and unlink Heading 3 from level 3, I can open the window Paragraph style for Heading 3 and associate another type of numbering.

IMO this is how it always works? Or what else is the problem ?

Cheers,
Cor
Comment 3 Alistair Leslie-Hughes 2013-10-25 08:26:40 UTC
Hi Cor,

When I open the document in Open Office or MS Word the numbering appears straight away without having to modify the document. This is how I would expect LibreOffice to work as well.
Comment 4 Cor Nouws 2013-10-25 09:59:54 UTC
OK, that is clear. Thanks,

Some testing:

  version     result
 3.4.6         1.1.1 <foo>
 3.5.7         1 <foo>
 3.6.6         1.1.1 <foo>
 4.0.0alpha1   1.1.1 <foo>
 4.0.0beta1    1 <foo>


I set miklos in CC - he knows all of these RTF-stuff.
Comment 5 Michael Stahl 2014-04-10 16:50:00 UTC
still broken in 4.2 but appears to be fixed on master?
 f9f0c0d2b13099848d8ea7a68a6d4cee08f71b47 fbb1bdb3a5fe5b0cf3784380cfdf172872f129a7

looks like this fixed it:

commit f453cf1d328f96dd5ad8e94b102bff3124e06154
Author:     Miklos Vajna <vmiklos@collabora.co.uk>
AuthorDate: Fri Jan 24 21:44:57 2014 +0100

    writerfilter: refactor to avoid redundant Papx class in doctok
Comment 6 Miklos Vajna 2014-04-26 15:43:54 UTC
Michael: thanks for the bibisect, indeed just backporting the rtftok part of that commit resolves the bug. (Great to see a real-life example on why the duplication in writerfilter that's now killed on master was a problem.)

libreoffice-4-2 review: https://gerrit.libreoffice.org/9173
Comment 7 Commit Notification 2014-04-28 12:16:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9209e07e2a724fa85ba6fee0ead5a0baad247d27&h=libreoffice-4-2

fdo#70853 writerfilter: refactor to avoid redundant Papx class in doctok


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.