fdo#70853 writerfilter: refactor to avoid redundant Papx class in doctok

(cherry picked from commit f453cf1d328f96dd5ad8e94b102bff3124e06154, but
only the rtftok part, the rest is not needed to fix the bug)

Conflicts:
	writerfilter/source/dmapper/DomainMapper.cxx
	writerfilter/source/dmapper/StyleSheetTable.cxx
	writerfilter/source/doctok/resources.xmi
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: Ic65e750bab99fb6b4c862418ccc53aa4b1f1298e
Reviewed-on: https://gerrit.libreoffice.org/9173
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>